--- a/website/css/style.css
+++ b/website/css/style.css
@@ -1,133 +1,22 @@
 
 body {
-    background-image: url("../assets/sayagata white.png");
+    background-image: url("../assets/runes_white.png");
     margin: 0;
     font-family: 'Lato';
 }
 
 @font-face {
     font-family: 'Lato';
-    src: url("../fonts/Lato-Regular.ttf") format("opentype");
+    src: url("/fonts/Lato-Regular.ttf") format("opentype");
     font-weight: 400;
 }
 
 @font-face {
     font-family: 'RobotoMono';
-    src: url("../fonts/RobotoMono-Medium.ttf") format("opentype");
+    src: url("/fonts/RobotoMono-Medium.ttf") format("opentype");
     font-weight: 400;
 }
 
-
-
-/*
- *  HIDERS
- */
-@media all and (max-width: 900px) {
-
-     .hide-on-limit1 { display: none; }
-     .center-on-limit1 { width: 100%; }
-
-}
-
-@media all and (max-width: 300px) {
-
-     .hide-on-limit2 { display: none; }
-     .center-on-limit2 { width: 100%; }
-
-}
-
-
-
-/*
- *  BUTTONS
- */
-.btn {
-  display: inline-block;
-  line-height: 36px;
-  padding-left: 1%;
-  padding-right: 1%;
-  vertical-align: middle;
-  -webkit-tap-highlight-color: transparent;
-  outline: 0;
-  text-decoration: none;
-  text-align: center;
-  transition: 0.5s;
-  cursor: pointer;
-}
-
-.btn.rounded {
- border: none;
- border-radius: 2px;
-}
-
-.btn.disabled, .btn[disabled] {
- pointer-events: none;
- background-color: #DFDFDF !important;
- box-shadow: none;
- color: #9F9F9F !important;
- cursor: default;
-}
-
-.btn.disabled:hover, .btn[disabled]:hover {
- background-color: #DFDFDF !important;
- color: #9F9F9F !important;
-}
-
-.btn i {
- font-size: 1.3rem;
- margin-right: 10px;
- vertical-align: top;
- line-height: inherit;
-}
-
-.btn.flat {
-  box-shadow: none;
-  background-color: transparent;
-  color: #343434;
-  cursor: pointer;
-  transition: background-color .2s;
-}
-
-.btn.flat:focus {
-  background-color: transparent;
-}
-
-.btn.flat:focus, .btn.flat:hover {
-  background-color: rgba(0, 0, 0, 0.1);
-  box-shadow: none;
-}
-
-.btn.flat:active {
-  background-color: rgba(0, 0, 0, 0.2);
-}
-
-.btn.flat.disabled {
-  background-color: transparent !important;
-  color: #b3b3b3 !important;
-  cursor: default;
-}
-
-.btn.large {
-  height: 54px;
-  line-height: 54px;
-}
-
-.btn.large i {
-  font-size: 1.6rem;
-}
-
-.enlarge {
-  transition: 0.5s;
-}
-
-.enlarge:hover {
-  transform: scale(1.1);
-}
-
-
-/*
- *  LINKS
- */
 a {
   background-color: transparent;
   text-decoration: none;
@@ -138,323 +27,3 @@ a:active,
 a:hover {
  outline: 0;
 }
-
-
-
-/*
- *  ALIGNMENTS
- */
-.hide {
-  display: none !important;
-}
-
-.left-align {
-  text-align: left;
-}
-
-.right-align {
-  text-align: right;
-}
-
-.center {
-  text-align: center;
-}
-
-.center-align {
-  float: center !important;
-}
-
-.left {
-  float: left !important;
-}
-
-.right {
-  float: right !important;
-}
-
-.center-block {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.top-align {
-  vertical-align: top;
-}
-
-.mid-align {
-  vertical-align: middle;
-}
-
-
-
-/*
- *  BLOCKS
- */
-.block {
- display:inline-block;
- vertical-align: top;
- margin-left: auto;
- margin-right: auto;
- margin-top: 0px;
- left: auto;
- right: auto;
-}
-
-.block.percent10 {
- width: 9.5%;
-}
-
-.block.percent20 {
- width: 19.5%;
-}
-
-.block.percent30 {
- width: 29.5%;
-}
-
-.block.percent40 {
- width: 39.5%;
-}
-
-.block.percent50 {
- width: 49.5%;
-}
-
-.block.percent60 {
- width: 59.5%;
-}
-
-.block.percent70 {
- width: 69.5%;
-}
-
-.block.percent80 {
- width: 79.5%;
-}
-
-.block.percent90 {
- width: 89.5%;
-}
-
-.block.percent100 {
- width: 100%;
-}
-
-.block.sub1 {
- width: 100%;
-}
-
-.block.sub2 {
- width: 49.5%;
-}
-
-.block.sub3 {
- width: 33%;
-}
-
-.block.sub4 {
- width: 24%;
-}
-
-.block.sub5 {
- width: 20%;
-}
-
-.block.sub6 {
- width: 16.6666666666%;
-}
-
-.block.sub7 {
- width: 14.25%;
-}
-
-.block.sub8 {
- width: 12.5%;
-}
-
-.block.sub9 {
- width: 11.1111111111%;
-}
-
-.block.sub10 {
- width: 10%;
-}
-
-
-
-/*
- *  MATERIAL ICONS
- */
-.icon-block {
-  padding: 0 15px;
-}
-
-.icon-block .material-icons {
-	font-size: inherit;
-}
-
-i {
-  line-height: inherit;
-}
-
-i.left {
-  float: left;
-  margin-right: 15px;
-}
-
-i.right {
-  float: right;
-  margin-left: 15px;
-}
-
-i.tiny {
-  font-size: 1rem;
-}
-
-i.small {
-  font-size: 2rem;
-}
-
-i.medium {
-  font-size: 4rem;
-}
-
-i.large {
-  font-size: 6rem;
-}
-
-
-
-/*
- *  PARALLAX
- */
-.parallax-container {
-  position: relative;
-  overflow: hidden;
-}
-
-.parallax {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: -1;
-}
-
-.parallax img {
-  display: none;
-  position: absolute;
-  left: 50%;
-  bottom: 0;
-  min-width: 100%;
-  min-height: 100%;
-  -webkit-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
-}
-
-
-
-/*
- *  FILL FX
- */
-@keyframes ffx-in {
-	from {
-		background-position: 200% 0%;
-	}
-	to {
-		background-position: 0% 0%;
-	}
-}
-
-@keyframes ffx-out {
-	from {
-		background-position: 0% 0%;
-	}
-	to {
-		background-position: 0% 200%;
-	}
-}
-
-.ffx {
-	animation-fill-mode: forwards;
-	animation-iteration-count: 1;
-	animation-duration: 0.5s;
-	animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1);
-	transition: 0.5s cubic-bezier(0.215, 0.610, 0.355, 1);
-	background-size: 200% 200%;
-	background-position: 200% 0%;
-	background-repeat: no-repeat;
-}
-
-.ffx.fx-in {
-  animation-name: ffx-in;
-}
-
-.ffx.fx-out {
-	animation-name: ffx-out;
-}
-
-.ffx.fx-dark {
-  background-image: linear-gradient(to top right, transparent 25%, rgb(0, 0, 0, 0.5) 25%, rgb(0, 0, 0, 0.5) 75%, transparent 75%);
-}
-
-.ffx.fx-light {
-  background-image: linear-gradient(to top right, transparent 25%, rgb(255, 255, 255, 0.5) 25%, rgb(255, 255, 255, 0.5) 75%, transparent 75%);
-}
-
-.ffx.fx-white {
-  background-image: linear-gradient(to top right, transparent 25%, rgb(255, 255, 255, 1) 25%, rgb(255, 255, 255, 1) 75%, transparent 75%);
-}
-
-.ffx.fx-black {
-  background-image: linear-gradient(to top right, transparent 25%, rgb(0, 0, 0, 1) 25%, rgb(0, 0, 0, 1) 75%, transparent 75%);
-}
-
-
-/*
- *  SHINE
- */
-
-
- @keyframes sfx {
- 	from {
- 		background-position: 200% 0%;
- 	}
- 	to {
- 		background-position: 0% 200%;
- 	}
- }
-
-  @keyframes sfx-back {
-  	from {
-  		background-position: 0% 200%;
-  	}
-  	to {
-  		background-position: 200% 0%;
-  	}
-  }
-
- .sfx {
- 	animation-fill-mode: forwards;
- 	animation-iteration-count: 1;
- 	animation-duration: 0.5s;
- 	animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1);
- 	transition: 0.5s cubic-bezier(0.215, 0.610, 0.355, 1);
- 	background-size: 200% 200%;
- 	background-position: 200% 0%;
- 	background-repeat: no-repeat;
- }
-
- .sfx.sfx-shine {
- 	animation-name: sfx;
-  background-image: linear-gradient(to top right, transparent 25%, rgb(255, 255, 255, 1) 25%, rgb(255, 255, 255, 1) 75%, transparent 75%);
- }
-
- .sfx.sfx-back {
- 	animation-name: sfx-back;
-  background-image: none;
- }
