--- a/gamedesign/css/gamedesign.css
+++ b/gamedesign/css/gamedesign.css
@@ -1,108 +1,181 @@
 
+.container {
+  display: grid;
+  grid-auto-rows: 260px;
+  grid-template-columns: repeat(auto-fill, minmax(450px, 500px));
+  place-items: center;
+  place-content: space-around;
+  grid-row-gap: 50px;
+}
+
 .game {
-  width: 99%;
-  height: 300px;
+  width: 450px;
+  height: 250px;
   margin:auto;
-  border-radius: 10px;
-  margin-bottom: 40px;
-  overflow: hidden;
+  margin-bottom: 100px;
 }
 
-.game.bkg {
-  background-image: url("../../website/assets/sayagata black.png");
-}
-
-.game.brown-bkg {
-  background-image: linear-gradient(rgba(200, 130, 30, 0.15),rgba(200, 130, 30, 0.15)),
-                    url("../../website/assets/sayagata black.png");
-}
-
-.game.green-bkg {
-  background-image: linear-gradient(rgba(0, 255, 0, 0.15),rgba(0, 255, 0, 0.15)),
-                    url("../../website/assets/sayagata black.png");
-}
-
-.game.white-bkg {
-  background-image: linear-gradient(rgba(255, 255, 255, 0.15),rgba(255, 255, 255, 0.15)),
-                    url("../../website/assets/sayagata black.png");
-}
-
-.game.red-bkg {
-  background-image: linear-gradient(rgba(255, 0, 0, 0.15),rgba(255, 0, 0, 0.15)),
-                    url("../../website/assets/sayagata black.png");
-}
-
-.game.purple-bkg {
-  background-image: linear-gradient(rgba(255, 0, 255, 0.15),rgba(255, 0, 255, 0.15)),
-                    url("../../website/assets/sayagata black.png");
-}
-
-.game.blue-bkg {
-  background-image: linear-gradient(rgba(0, 0, 255, 0.15),rgba(0, 0, 255, 0.15)),
-                    url("../../website/assets/sayagata black.png");
-}
-
-.game .block-img, .game .block-text {
-  display:inline-block;
+.game .card-img {
   position: relative;
-}
-
-.game .large {
-  font-size: 2rem;
-}
-
-hr {
-  color: rgb(255, 255, 255);
-  background-color: rgb(255, 255, 255);
-  width: 1000%;
-  position: relative;
-  z-index: 1;
-  transform: translate(-50%, 0);
-}
-
-.game .medium {
-  font-size: 1.5rem;
-}
-
-.game .block-img {
-  width: 59%;
-  overflow: hidden;
+  margin:auto;
+  width: 100%;
   height: 100%;
-  z-index: 2;
+  overflow: hidden;
+  transform: translateY(-100%);
+  border-radius: 10px;
+
+  animation-duration: 0.5s;
+  animation-name: cardIn;
+  animation-fill-mode: forwards;
 }
 
-.game .block-img.cut-bottom-right {
-  -webkit-clip-path: polygon(0 0, 0 100%, 80% 100%, 100% 0);
+.game:hover .card-img {
+  animation-duration: 0.5s;
+  animation-name: cardOut;
+  animation-fill-mode: forwards;
 }
 
-.game .block-img.cut-bottom-left {
-  -webkit-clip-path: polygon(0 0, 20% 100%, 100% 100%, 100% 0);
+.game .card-description {
+  width: 100%;
+  height: 100%;
+  margin:auto;
+  position: relative;
+  border-radius: 10px;
+  background: #9b59b6;
+  transition: 0.5s;
+  color: white;
+
+  animation-duration: 0.5s;
+  animation-name: flipCardLeftR;
+  animation-fill-mode: forwards;
 }
 
-.game .block-img.cut-top-right {
-  -webkit-clip-path: polygon(0 0, 0 100%, 100% 100%, 80% 0);
+.game:hover .card-description {
+  animation-duration: 0.5s;
+  animation-name: flipCardLeft;
+  animation-fill-mode: forwards;
 }
 
-.game .block-img.cut-top-left {
-  -webkit-clip-path: polygon(20% 0, 0 100%, 100% 100%, 100% 0);
+@keyframes flipCardLeft {
+  0% {
+    transform: translateX(-10%) scale(0.9);
+    z-index: 0;
+  }
+  60% {
+    transform: translateX(-100%) scale(1);
+    z-index: 0;
+  }
+  100% {
+    transform: translateX(-10%) scale(1);
+    z-index: 10;
+  }
 }
 
-.game .btn {
-  width: 50%;
+@keyframes flipCardLeftR {
+  0% {
+    transform: translateX(-10%) scale(1);
+    z-index: 10;
+  }
+  60% {
+    transform: translateX(-100%) scale(1);
+    z-index: 0;
+  }
+  100% {
+    transform: translateX(-10%) scale(0.9);
+    z-index: 0;
+  }
 }
 
-.game .block-text {
-  width: 39%;
-  margin-top: 10px;
+@keyframes cardIn {
+  0% {
+    transform: translateY(-100%) scale(0.9);
+    z-index: 0;
+  }
+  60% {
+    transform: translateY(-100%) scale(1);
+    z-index: 0;
+  }
+  100% {
+    transform: translateY(-100%) scale(1);
+    z-index: 10;
+  }
 }
 
-.game .desc {
-  text-align: justify;
+@keyframes cardOut {
+  0% {
+    transform: translateY(-100%) scale(1);
+    z-index: 10;
+  }
+  60% {
+    transform: translateY(-100%) scale(1);
+    z-index: 0;
+  }
+  100% {
+    transform: translateY(-100%) scale(0.9);
+    z-index: 0;
+  }
+}
+
+.arrow {
+  display:inline-block;
+  margin: auto;
+  fill: white;
+  padding-left: 6px;
+  vertical-align: middle;
+  height: 1;
+  width: 5%;
+}
+
+.description {
+  display:inline-block;
   width: 90%;
-  margin-top: 20px;
-  height: 170px;
+  height: 100%;
+  vertical-align: middle;
+  /*
+  border-left: 3px dashed white;
+  */
 }
 
-.game .desc.dog {
-  height: 230px;
+.left
+{
+  display:inline-block;
+  vertical-align: middle;
+  width: 1%;
+  height:100%;
+  background-image: linear-gradient(to top, white 60%, rgba(255, 255, 255, 0) 0%);
+  background-position: bottom;
+  background-size: 3px 20px;
+  background-repeat: repeat-y;
+}
+
+
+.text {
+  margin: 10px;
+  background: #713b87;
+  /*
+  border-style: solid;
+  border-color: #351c40 #532b64 #532b64 #351c40;
+  border-width: 5px;
+  */
+  border-radius: 10px;
+  box-sizing: border-box;
+  padding: 30px;
+  height: 180px;
+  text-align: justify;
+}
+
+.btn {
+  display: block;
+  box-sizing: border-box;
+  width: 50%;
+  margin: auto;
+  background: #8e44ad;
+  border-radius: 30px;
+  text-align: center;
+  padding: 10px;
+  transition: 0.2s;
+}
+
+.btn:hover {
+  transform: scale(1.2);
 }
