--- a/website/css/header.css
+++ b/website/css/header.css
@@ -1,35 +1,96 @@
-
 .header {
-  position: sticky;
-  padding-top: 6px;
-  padding-left: 30px;
-  top: 0;
-  height: 4vw;
-  background-color: white;
-  font-size: 2vw;
-  z-index: 10;
+  position: fixed;
+  display: block;
+  width: 100%;
+  z-index: 100;
+  height: 0px;
 }
-
-.header .large {
-  font-size: 2rem;
+.header .top {
+    display: block;
+    background-color: black;
+    text-align: center;
+    height: 60px;
+    color:white;
+    transition: 0.5s;
 }
-
-.header * {
-  display: inline-block;
-  vertical-align: middle;
+.header .top.scrolled {
+    height: 5px;
 }
-
-.header .filled-button-dark {
-  padding-right: 10px;
-  padding-left: 10px;
-  padding-bottom: 2px;
-  padding-top: 1px;
-}
-
-.header .head {
+.header .triangle {
+  display: block;
+  width: 200px;
+  height: 0px;
+  margin: auto;
+  transform: translate(0,-10px);
   transition: 0.5s;
-  vertical-align: top;
+}
+.header .triangle.scrolled {
+  transform: scale(0.5);
+}
+.header .head-dot {
+  width: 100px;
+  top: 60px;
+  position: absolute;
+  transform: translate(0, -50%);
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  z-index: 3;
+  transition: 0.5s;
+}
+.header .head-shape {
+  width: 100px;
+  top: 60px;
+  position: absolute;
+  transform: translate(0, -50%);
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  z-index: 3;
+  transition: 0.5s;
+}
+.header .head-dot.scrolled {
+  width: 30px;
+  opacity: 1;
+  transform: translate(0,-50px);
+}
+.header .head-shape.scrolled {
+  width: 30px;
+  transform: translate(0,-50px);
+  opacity: 0;
+}
+.header .head-shape:hover {
+  opacity: 1;
+}
+.header-fill {
+  display: block;
+  height: 170px;
+}
+.header .align-left {
   display: inline-block;
-  margin-right: 10px;
-  width: 7%;
+  position: fixed;
+  color: white;
+  left: 5%;
+  top: 5px;
+  font-size: 2.5em;
+  transition: 0.5s;
+}
+.header .align-left.scrolled {
+  font-size: 1em;
+  opacity: 0;
+}
+.header .align-right {
+  display: inline-block;
+  position: fixed;
+  color: white;
+  right: 5%;
+  top: 5px;
+  font-size: 2.5em;
+  transition: 0.5s;
+}
+.header .align-right.scrolled {
+  font-size: 1em;
+  opacity: 0;
 }
